Creating a full copy scene doens't support parenting #57512

Closed
opened 2018-10-30 13:32:44 +01:00 by Mal Duffin · 3 comments
Member

System Information
Windows 10, GTX 1070

Blender Version
Broken: Blender 2.8 Alpha 2

Short description of error
If you have a parented object and make a Full Copy of a scene, the parenting is lost.

Exact steps for others to reproduce the error

  1. Create a new default scene
  2. Add a new empty, and parent the box to it
  3. Move the empty around, the box moves with it
  4. Make a new scene, Full Copy
  5. Move the new empty around, the new box doesn't move with it.
**System Information** Windows 10, GTX 1070 **Blender Version** Broken: Blender 2.8 Alpha 2 **Short description of error** If you have a parented object and make a Full Copy of a scene, the parenting is lost. **Exact steps for others to reproduce the error** 1) Create a new default scene 2) Add a new empty, and parent the box to it 3) Move the empty around, the box moves with it 4) Make a new scene, Full Copy 5) Move the new empty around, the new box doesn't move with it.
Author
Member

Added subscriber: @MalDuffin

Added subscriber: @MalDuffin
Bastien Montagne was assigned by Brecht Van Lommel 2018-10-30 15:45:23 +01:00

This issue was referenced by c62fad2a9a

This issue was referenced by c62fad2a9a6ce927867362c2935d4484b8120ebc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57512
No description provided.