Fix T57512: Creating a full copy scene doens't support parenting.

Will say it once again: we should really, really switch all that
duplicating code to proper use of new ID management API :(